Finally fix width overflow

--- a/src/style.scss
+++ b/src/style.scss
@@ -152,6 +152,7 @@ html.hide-wp-admin-bar {
 
 .usages-collapsed {
   max-height: 32px;
+  max-width: 190px;
   overflow-y: hidden;
   overflow-x: hidden;
 }
